--- a/crestexplorer.css
+++ b/crestexplorer.css
@@ -34,5 +34,11 @@ ul
 
 .name
 {
-    padding-right:0.5em;
+    padding-right:1em;
+    display:inline-block;
+}
+
+.value
+{
+    display:inline-block;
 }
